# VulkanMiniEngine

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VulkanMiniEngine.cpp  VulkanMiniEngine.h  main.cpp  vcpkg.json
.github/workflows/: ci.yml
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/include/common/: blackboard.hpp  cache.hpp  cache_factory.hpp  small_vector.hpp  state_machine.hpp
engine/include/configs/: im3d.h  imgui.h
engine/include/renderer/: forward_pass.hpp  imgui_pass.hpp  present_pass.hpp  render_graph.hpp
engine/include/scene/: components.hpp  scene.hpp  systems.hpp
engine/include/services/gfx/: allocator.hpp  context.hpp  descriptors.hpp  frame.hpp  pipelines.hpp  resources.hpp  shaders.hpp  staging_buffer.hpp  swapchain.hpp
engine/include/services/wsi/: input.hpp  window.hpp
engine/src/: engine.cpp
engine/src/renderer/: forward_pass.cpp  imgui_pass.cpp  present_pass.cpp  render_graph.cpp
engine/src/scene/: scene.cpp
engine/src/services/gfx/: allocator.cpp  context.cpp  descriptors.cpp  frame.cpp  pipelines.cpp  resources.cpp  shaders.cpp  staging_buffer.cpp  swapchain.cpp
engine/src/services/wsi/: input.cpp  window.cpp
examples/: CMakeLists.txt  example.cpp
renderer/: allocator.cpp  allocator.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  framegraph.cpp  framegraph.hpp  window.cpp  window.hpp
shaders/: CMakeLists.txt  imgui.frag  imgui.vert  shader.frag  shader.vert
