# CMakeList.txt : CMake project for VulkanMiniEngine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("VulkanMiniEngine")

# Add source to this project's executable.
add_executable (VulkanMiniEngine "VulkanMiniEngine.cpp" "VulkanMiniEngine.h")

# TODO: Add tests and install targets if needed.
